@@ -11,6 +11,7 @@ version ? (????-??-??):
   - fixed tax calculations on Sale Registry (alec)
   - sticky/clickable nodelistshort (alec)
   - upgraded OverLIB to 4.17 version (alec)
+  - now is possible to define tariff without tax (alec)
 
 version 1.7.1 Swarog <A.L.E.C's Nightmare> (2005-06-27):
 
